# Webify-CLI

./: .gitignore  LICENSE  LICENSE.MD  README.md  pyproject.toml  ruff.toml
app/: main.py
app/commands/: converter_webp.py  generate_favicon.py
app/core/: contants.py  converter.py  converter_webp.py  generate_favicon.py
app/utils/: auto_complete.py  report.py
