[project]
name = "webify"
version = "1.1"
description = "A fast CLI tool to convert images into web-optimized formats."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.2.0",
    "ruff>=0.15.16",
    "typer>=0.26.7",
]

[project.scripts]
webify = "app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
